refactor: 플레이어 게임 진행 루프 리팩토링